homepage and some styling
Co-authored-by: danyuz <danyuz@users.noreply.github.com>

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,15 @@
 hr {
     border: 1px solid white;
 }
+
+#mainTitle {
+    color: coral;
+}
+
+#sideBarTitle {
+    color:rgb(203, 160, 223);
+}
+
+.sideBarDatasetTitles {
+    color: rgb(199, 140, 148);
+}
